<resources>
    <!-- 앱 공통-->
    <string name="app_name">Triplan</string>
    <string name="common_string">%s</string>

    <!-- 카테고리 -->
    <string name="category_all">전체</string>
    <string name="category_accommodation">숙소</string>
    <string name="category_restaurant">맛집</string>
    <string name="category_cafe">카페</string>
    <string name="category_place">가볼 곳</string>
    <string name="category_etc">기타</string>


    <!-- 초기 설정-->
    <string name="initial_setting_text_msg">여행을 떠나기전,\nTriplan과 함께해요!</string>
    <string name="initial_setting_text_name">우선, 이용자님의 멋진 이름을 지어주세요</string>
    <string name="initial_setting_text_profile">%s님의 멋진 프로필사진을 골라주세요</string>
    <string name="initial_setting_start">시작하기</string>

    <!-- 메인 홈-->
    <string name="mainhome_msg">%s님 Triplan과 함께\n총 %d번의 여행을 떠나주셨군요!</string>
    <string name="mainhome_group">%s님의 여행그룹</string>
    <string name="mainhome_trip_msg1">진행중인 여행</string>
    <string name="mainhome_trip_msg2">앞두고 있는 여행</string>
    <string name="mainhome_trip_day">Day - </string>
    <string name="mainhome_trip_d">D - </string>
    <string name="mainhome_group_join">그룹 참여</string>
    <string name="mainhome_group_create">그룹 생성</string>
    <string name="mainhome_no_ongoing">현재 여행중이 아닙니다!</string>
    <string name="mainhome_no_planned">앞두고 있는 여행이 없습니다.\n그룹에 생성/참여하고 여행을 떠나봐요!</string>

    <!--그룹 생성-->
    <string name="creategroup_msg">그룹 생성하기</string>
    <string name="creategroup_create">생성하기</string>
    <string name="creategroup_image">그룹 대표 이미지</string>

    <!--그룹 수정-->
    <string name="editgroup_msg">그룹 수정하기</string>
    <string name="editgroup_edit">수정하기</string>

    <!--그룹 참여-->
    <string name="joingroup_msg">그룹 참여하기</string>
    <string name="joingroup_join">참여하기</string>

    <!--그룹 홈-->
    <string name="grouphome_msg">%s의 최근 여행</string>
    <string name="grouphome_all_trip">더보기 ></string>

    <!--그룹 홈 드로어-->
    <string name="groupHomeDrawer_member">그룹 맴버</string>
    <string name="groupHomeDrawer_code">참여코드</string>
    <string name="groupHomeDrawer_setting">그룹 설정</string>
    <string name="groupHomeDrawer_out">그룹 나가기</string>

    <!--여행 생성-->
    <string name="createtrip_msg">여행 생성하기</string>
    <string name="createtrip_date">여행 날짜</string>
    <string name="createtrip_people">참여 인원</string>
    <string name="createtrip_image">여행 이미지</string>
    <!--여행-->
    <string name="home">홈</string>
    <string name="chat">채팅</string>
    <string name="archive">아카이브</string>
    <string name="schedule">스케줄</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <!--여행 메인-->
    <string name="participants">참여 인원</string>
    <string name="tripDayCount">Day %d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>