<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tripHomeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/home" />
    <item
        android:id="@+id/tripScheduleFragment"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:menuCategory="secondary"
        android:title="@string/schedule" />
    <item
        android:id="@+id/tripChatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:menuCategory="secondary"
        android:title="@string/chat" />
    <item
        android:id="@+id/tripArchiveFragment"
        android:enabled="true"
        android:icon="@drawable/ic_archive"
        android:menuCategory="secondary"
        android:title="@string/archive" />
</menu>