<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/bg_group_drawer"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/drawerLayout_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <TextView
                    android:id="@+id/tv_groupHomeDrawer_member"
                    style="@style/tv_16_regular_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:includeFontPadding="false"
                    android:text="@string/groupHomeDrawer_member"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_groupHomeDrawer_member" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/view4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toTopOf="@+id/tv_groupHomeDrawer_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_groupHomeDrawer_code"
                    style="@style/tv_14_regular_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:includeFontPadding="false"
                    android:text="@string/groupHomeDrawer_code"
                    app:layout_constraintBottom_toTopOf="@+id/tv_group_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_group_code"
                    style="@style/tv_16_bold_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:includeFontPadding="false"
                    android:text="L28ATC"
                    app:layout_constraintBottom_toTopOf="@+id/view5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toTopOf="@+id/bt_groupHomeDrawer_setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_groupHomeDrawer_setting"
                    style="@style/ibt_14_regular_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/groupHomeDrawer_setting"
                    app:icon="@drawable/ic_setting"
                    app:iconGravity="end"
                    app:layout_constraintBottom_toTopOf="@+id/view6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toTopOf="@+id/bt_groupHomeDrawer_out"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_groupHomeDrawer_out"
                    style="@style/ibt_14_regular_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/groupHomeDrawer_out"
                    app:icon="@drawable/ic_out"
                    app:iconGravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</layout>